fixed margins on mobile

--- a/src/pages/home/lifestyle/lifestyle.css
+++ b/src/pages/home/lifestyle/lifestyle.css
@@ -53,6 +53,9 @@
     width: 250px;
 }
 @media(max-width: 990px){
+    .white-bg h1{
+        margin:0 0 0 0;
+    }
     .section2{
        padding: 0;
     }
